<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <TextView
        style="@style/label_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dip"
        android:layout_marginRight="24dip"
        android:layout_marginTop="8dip"
        android:text="@string/software_recommend_label" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="16dip"
        android:layout_marginRight="16dip"
        android:layout_marginTop="6dip"
        android:background="@color/theme_green" />

    <!-- 随变铃声 -->

    <LinearLayout
        android:id="@+id/randtone_layout"
        android:layout_width="fill_parent"
        android:layout_height="56dip"
        android:layout_marginLeft="16dip"
        android:layout_marginRight="16dip"
        android:background="@drawable/list_item_selector"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dip"
            android:src="@drawable/ic_randtone" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="8dip"
            android:layout_marginRight="8dip"
            android:orientation="vertical" >

            <TextView
                style="@style/title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:singleLine="true"
                android:text="@string/randtone_title" />

            <TextView
                style="@style/summary_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/randtone_summary" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>