<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:orientation="vertical" >

        <!-- 联系人选项 -->

        <TextView
            style="@style/label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dip"
            android:layout_marginRight="24dip"
            android:layout_marginTop="8dip"
            android:text="@string/contacts_option" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="16dip"
            android:layout_marginRight="16dip"
            android:layout_marginTop="6dip"
            android:background="@color/theme_green" />
        <!-- 手机联系人 -->

        <RelativeLayout
            android:id="@+id/phone_contacts_layout"
            android:layout_width="fill_parent"
            android:layout_height="56dip"
            android:layout_marginLeft="16dip"
            android:layout_marginRight="16dip"
            android:background="@drawable/list_item_selector" >

            <TextView
                android:id="@+id/phone_contacts_title"
                style="@style/title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dip"
                android:singleLine="true"
                android:text="@string/phone_contacts_title" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dip"
                android:background="@drawable/ic_next_right" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:layout_marginLeft="16dip"
            android:layout_marginRight="16dip"
            android:background="@color/theme_green" />
        <!-- SIM卡联系人 -->

        <RelativeLayout
            android:id="@+id/sim_contacts_layout"
            android:layout_width="fill_parent"
            android:layout_height="56dip"
            android:layout_marginLeft="16dip"
            android:layout_marginRight="16dip"
            android:background="@drawable/list_item_selector" >

            <TextView
                android:id="@+id/sim_contacts_title"
                style="@style/title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dip"
                android:singleLine="true"
                android:text="@string/sim_contacts_title" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dip"
                android:background="@drawable/ic_next_right" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>